[EME] MediaKeySystemController and client leaks https://bugs.webkit.org/show_bug.cgi?id=276660

Reviewed by Andy Estes.

The client is now destroyed once the page has been destroyed. Driving-by, use WeakRef in the client
to keep track of the page and make the controller non-copyable.

* Source/WebCore/Modules/encryptedmedia/MediaKeySystemController.cpp:
(WebCore::MediaKeySystemController::MediaKeySystemController):
(WebCore::provideMediaKeySystemTo):
* Source/WebCore/Modules/encryptedmedia/MediaKeySystemController.h:
* Source/WebKit/WebProcess/WebCoreSupport/WebMediaKeySystemClient.cpp:
(WebKit::WebMediaKeySystemClient::pageDestroyed):
(WebKit::WebMediaKeySystemClient::requestMediaKeySystem):
(WebKit::WebMediaKeySystemClient::cancelMediaKeySystemRequest):
* Source/WebKit/WebProcess/WebCoreSupport/WebMediaKeySystemClient.h:
(WebKit::WebMediaKeySystemClient::~WebMediaKeySystemClient): Deleted.

Canonical link: https://commits.webkit.org/281048@main