Source/WebCore/Modules/encryptedmedia/MediaKeySystemController.h
@@ -28,6 +28,7 @@
 
 #include "MediaKeySystemClient.h"
 #include "Supplementable.h"
+#include <wtf/Noncopyable.h>
 
 namespace WebCore {
 
@@ -35,6 +36,7 @@ class MediaKeySystemRequest;
 
 class MediaKeySystemController : public Supplement<Page> {
     WTF_MAKE_FAST_ALLOCATED;
+    WTF_MAKE_NONCOPYABLE(MediaKeySystemController);
 public:
     explicit MediaKeySystemController(MediaKeySystemClient&);
     ~MediaKeySystemController();
